# sec-audit

./: CMakeLists.txt  PKGBUILD  README.md  SECURITY.md
.github/workflows/: build.yml
include/: report.hpp  types.hpp  util.hpp
src/: main.cpp  report.cpp  util.cpp
src/checks/: credentials.cpp  cron.cpp  dns.cpp  exposure.cpp  filesystem.cpp  firewall.cpp  kernel.cpp  ports.cpp  processes.cpp  software.cpp  ssh.cpp  systemd.cpp  telemetry.cpp  usb.cpp  users.cpp
